    is a new config option allow_edit_deleted to turn off this
    restriction.
 - Corrected a missing ; in eprints.css
 - [#1158] On user area page, begin new item, and items-in-workarea
    are now seperate boxes. The box with the items-in-workarea is
    now called "Undeposited Items".
 - [#1089] The deprecated cache option warning in SearchExpression
    ->new now tells the file and line that passed the deprecated 
    option.

** 2.3.13.beta.1

2005-07-20 cjg

 - Fixed bug in package creator which meant the codename didn't get
    set correctly.
 - Dataset unknown field error now reports the archiveid for better
    debugging.

======================================================================
25/07/2005 - EPRINTS-2.3.13
======================================================================

2005-08-23 cjg

 - Changed "deny, allow" to "deny,allow" - apache didn't like the
    space.

2005-08-31 cjg

 - Added start of export plugin support. This includes:
    * New module Plugins which loads plugins and knows about system
       level plugins.
    * New module Plugin which contains a class which represents a
       single instance of a plugin.
    * New top level config /opt/eprints2/plugins/output/
    * New archive config .../foo/cfg/plugins/output/
    * Two initial output types: xml & bibtex
 - Fixed the "use" lines for the new plugin modules.
 - EPrints::Plugins now loads system plugins when it is "use"d.
 
2005-09-12 cjg

 - Fixed bug in $eprint->last_in_thread which reported a loop
    error, even when there wasn't one.

2005-09-13 cjg

 - XML Plugin now ensures utf8() of strings, so duff data will not
    produce an invalid file.
 - Public and staff search now ignore everything after a second slash.
    this makes /perl/search/simple/foo.txt legal. This is used to
    provide sane filenames when exporting via plugins.
 - added $dataobj->export method which exports a single dataobject 
    using a single output plugin.
